# Erbium.Launcher

./: .gitignore  .prettierignore  .prettierrc  README.md  bun.lockb  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: builds.rs  game.rs  mod.rs  utilities.rs
src/app/: layout.tsx  page.tsx
src/app/home/: page.tsx
src/app/settings/: page.tsx
src/components/Global/: Frame.tsx  GlassContainer.tsx  Particles.tsx  Sidebar.tsx
src/components/Home/: Header.tsx  LaunchTab.tsx  News.tsx  RecentlyPlayed.tsx
src/components/OnBoarding/: ConfirmName.tsx  Finishing.tsx  GetStarted.tsx  Terms.tsx  Username.tsx
src/components/Settings/: MiscTab.tsx  PlayerTab.tsx  SettingsNav.tsx
src/components/core/: frame.tsx  particles.tsx  sidebar.tsx
src/components/home/: modal.tsx
src/components/onboarding/steps/: confirmation-step.tsx  finishing-step.tsx  username-step.tsx  welcome-step.tsx
src/css/: Index.css
src/pages/: Home.tsx  Library.tsx  Login.tsx  Settings.tsx
src/utils/: rpc.tsx
src/zustand/: BuildStore.tsx  GameSettingsStore.ts  LaunchTabStore.tsx  LibraryStore.tsx  OnBoardingStore.tsx  UserStore.tsx  config.ts  configStore.tsx  user-state.tsx
