[package]
name = "Erbium"
version = "1.0.0"
description = "A Simple launcher to experience Erbium"
authors = ["Andrew"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sdk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
embed-resource = "2.4"
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.4", features = ["protocol-asset"] }
tauri-plugin-opener = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.4"
tauri-plugin-fs = "2.0"
sha2 = "0.10.8"
tauri-plugin-deep-link = "2.0"
tauri-plugin-log = "2.0"
tauri-plugin-os = "2.0"
log = "0.4"
discord-rich-presence = "0.2.4"
winapi = { version = "0.3", features = ["tlhelp32", "shellapi", "winbase", "processthreadsapi", "libloaderapi", "memoryapi", "winnt", "handleapi", "windef"] }
sysinfo = "0.29.10"
reqwest = { version = "0.11", features = ["blocking"] }
